implemented preview to shop toggle

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -37,6 +37,13 @@
     Will print to <strong>Zebra (4×6)</strong> automatically.
   </div>
 
+  <div class="row">
+  <label id=`modeLabel` for="modeToggle">
+    <input type="checkbox" id="modeToggle" />
+    <span id="modeLabel">Preview mode</span>
+  </label>
+ </div>
+
   <button id="printBtn">Generate &amp; Print</button>
   <div id="status"></div>
 
